# animal-emotion-classification

./: .gitignore  README.md  config.py  fine_tuning.ipynb  main.py  pyproject.toml  visualization.py
models/: model_config.txt
notebooks/: fine_tuning.ipynb
services/: emotion_classification.py  image_acquisition.py  image_corpping.py  object_detection.py  process_manager.py
src/: config.py  main.py  visualization.py
src/services/: emotion_classification.py  image_acquisition.py  image_cropping.py  object_detection.py  process_manager.py
tests/: conftest.py  test_emotion_classification.py  test_image_acquisition.py  test_image_cropping.py  test_object_detection.py  test_process_manager.py
