[project]
name = "animal-emotion-classification"
version = "0.1.0"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "timm==1.0.15",
    "pandas==2.2.3",
    "Pillow==11.1.0",
    "scikit-learn==1.6.1",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "numpy==2.1.1",
    "opencv-python==4.11.0.86",
    "ultralytics==8.3.102",
    "ipykernel==6.29.5",
    "pytest"
]
